# trollar-node

./: .gitignore  README.md  bootstrap_weights_beta.cpp  bootstrap_weights_live.cpp  build_version.cc  config-node.toml.sample  config-rpc.toml.sample
ci/: deploy-docker.sh  record_rep_weights.py
docker/ci/: Dockerfile-clang  Dockerfile-gcc  build.sh
docker/node/: Dockerfile  entry.sh
nano/ipc_flatbuffers_lib/flatbuffers-build/: flatbuffers.pc
nano/lib/: config.cpp  config.hpp  numbers.cpp  numbers.hpp  rpcconfig.cpp
nano/load_test/: entry.cpp
nano/nano_node/: CMakeLists.txt
nano/nano_rpc/: CMakeLists.txt
nano/node/: nodeconfig.cpp
nano/secure/: common.cpp
